<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="260dp"
              android:layout_height="fill_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/news_add_event_to_calendar"
        android:id="@+id/menu_button_add_to_calendar"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
    />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/news_share_event_via_email"
        android:id="@+id/menu_button_share_via_email"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/news_share_event_via_sms"
        android:id="@+id/menu_button_share_via_sms"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/news_menu_cancel"
        android:id="@+id/menu_button_cancel"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"/>
</LinearLayout>

