<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/romanblack_rss_notification_main"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/romanblack_rss_splash_screen">
  
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_centerVertical="true" 
                  android:layout_centerInParent="true" 
                  android:layout_margin="15dp"
    >

        <com.appbuilder.core.PushNotification.AppPushNotificationPanel
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView 
                android:id="@+id/romanblack_rss_notification_prev"
                android:src="@drawable/romanblack_rss_icon_arrow_left" 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" 
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" 
                android:layout_margin="5dp"
                android:visibility="invisible"/>

            <ImageView 
                android:id="@+id/romanblack_rss_notification_next"
                android:src="@drawable/romanblack_rss_icon_arrow_right"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" 
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:visibility="invisible"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
                          android:id="@+id/romanblack_rss_notification_panel" 
                          android:layout_width="fill_parent" 
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true"
                          android:orientation="vertical"
                          android:gravity="center">

                <TextView 
                    android:text="@string/one_from_one"
                    android:id="@+id/romanblack_rss_notification_counter" 
                    android:textSize="13sp" 			
                    android:textColor="#FFF"
                    android:layout_marginTop="5dp"
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    android:gravity = "center"/>
				
                <TextView 
                    android:text="" 
                    android:id="@+id/romanblack_rss_notification" 
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:paddingBottom="30dp"
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:gravity = "center" />
            </LinearLayout>
			
        </com.appbuilder.core.PushNotification.AppPushNotificationPanel>

        <LinearLayout android:id="@+id/romanblack_rss_notification_linearLayout"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent" 
                      android:layout_height="wrap_content" 
                      android:gravity="center" android:layout_marginTop="25dp">
      			
            <Button android:id="@+id/romanblack_rss_button_app"
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/open_app"
                    android:width="100dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"/>
        	
            <Button android:id="@+id/romanblack_rss_push_button_close"
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/close"
                    android:width="100dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"/>
	   
        </LinearLayout>    
    </LinearLayout>
</RelativeLayout>
